<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maze</string>
    <string name="action_settings">Settings</string>
    <string name="run_maze">Explore</string>
    <string name="title_activity_generating"></string>
    <string name="level">Level</string>
    <string name="gen_maze">Generate New Maze</string>
    <string name="driver">Driver Algorithm</string>
    <string name="load_str">Generating Maze</string>
    <string name="map">Show Map</string>
    <string name="walls">Show Walls</string>
    <string name="sol">Show Solution</string>
    <string name="success">Success!</string>
    <string name="failure">Failure</string>
    <string name="Lose">Sorry...\n\n</string>
    <string name="Win">Winner!</string>
    <string name="continue_game">Press the button below to play again.</string>
    <string name="battery">Battery Level: ~</string>
    <string name="path_length">Path Length: ~ \n</string>
    <string name="battery_level">Battery</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="pause">Pause</string>
    <string name="revisit">Revist</string>
    <string name="restart">Back to Home</string>

    <string-array name="builders">
        <item>Default</item>
        <item>Prim</item>
        <item>Eller</item>
    </string-array>
    <string-array name="drivers">
        <item>Manual</item>
        <item>Wall-Follower</item>
        <item>Wizard</item>
        <item>Pledge</item>
    </string-array>

    <string name="title_activity_play"></string>
    <string name="title_activity_finish"></string>

</resources>
